open graph image added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,12 @@
     <!-- for Facebook -->
     <meta property="og:title" content="Governance Data Aliance" />
     <meta property="og:url" content="http://governancedata.org" />
+    <meta property="og:image" content="http://goverancedata.org/css/img/gda-facebook.jpg" />
     <meta property="og:description" content="The Governance Data Alliance is a community of governance data producers, users, and funders committed to the effective production and use of high-quality data to advance democratic governance reforms in countries." />
 
     <!-- for Twitter -->
     <meta name="twitter:title" content="Governance Data Aliance" />
+    <meta property="twitter:image" content="http://goverancedata.org/css/img/gda-facebook.jpg" />
     <meta name="twitter:description" content="The Governance Data Alliance is a community of governance data producers, users, and funders committed to the effective production and use of high-quality data to advance democratic governance reforms in countries." />
     <meta property="twitter:url" content="http://governancedata.org" />
 
